feat: catch five more kinds of broken language in the contract kit, and add usableFactNames()
actionVariablesStayLocal, evaluateAgreesWithDetail, conditionDetail,
unusableFactNameRejected and compilerClosed now fail defects the 2.6 kit
passed. A new opt-in hook, usableFactNames(), checks that checkFactName
accepts the names a language's users write (eighteen checks). A cached
close failure is no longer attached twice. contract-kit.md documents the
--add-exports a named main module needs under Maven Surefire.

Closes #584, #594, #582.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01H1y2KA9B5iee8LCALPAS4N